# chip8-emulator

./: '  Cargo.toml  README.md  README.norg  flake.nix
.github/workflows/: nix.yml  rust.yml
src/: chip8.rs  graphics.rs  keyboard.rs  main.rs  render.rs  sound.rs  utility.rs  window.rs
src/shaders/: display.wgsl
