[package]
name = "chip8-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
wgpu = "0.16.1"
glfw = "0.52.0"
log = "0.4.19"
env_logger = "0.10.0"
dotenv = "0.15.0"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
fixedstep = "0.3.0"
rodio = "0.17.1"
